--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,12 +7,15 @@ main:
   - name: Главная
     url: '#about'
     weight: 10
+  - name: Кейсы
+    url: '#cases'
+    weight: 10
   - name: Посты
     url: '#posts'
     weight: 20
   - name: Проекты
     url: '#projects'
-    weight: 30
+    weight: 20
   - name: Разговоры
     url: '#talks'
     weight: 40
