Add new page with cases

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -70,7 +70,7 @@ features:
   privacy_pack:
     enable: false
   repository:
-    url: 'https://github.com/<username>/<repository>'
+    url: 'https://github.com/domelia/project-site'
     content_dir: content
     branch: main
   avatar:
@@ -107,7 +107,7 @@ extensions:
     branch: main
     local_backend: false
   academicons:
-    enable: true
+    enable: false
 
 # Security
 
